对分支再次理解 以及主分支的更改

--- a/1.html
+++ b/1.html
@@ -8,6 +8,9 @@
 
     </body>
     <div>
-        表扬你 ？？
+        我昨天合并了分支
+        所以其实所有资料都在这个main里 
+        切换到分支里对立面和main一样的资料进行修改后提交 就是更新了分支里的内容也就是说 出现了第二个版本的更改模式  
+        至于 main 和master 应该是一个意思 就是更新名字
 
     </div>>
